[package]
name = "my-dev-tools"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21.0"
clap = { version = "4.1.4", features = ["derive", "cargo"] }
md5 = "0.7.0"
serde_json = "1.0.94"
thiserror = "1.0.38"
